# rss-reader

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  codecov.yml  local.yml  manage.py  production.yml  pyproject.toml  sweep.yaml
.devcontainer/: devcontainer.json
.envs/.local/: .django  .postgres
.github/workflows/: ci.yml  main.yml
compose/local/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  celery_beat.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
repo/: pyproject.toml
requirements/: base.txt  local.txt  production.txt
rrs_reader/: conftest.py
rrs_reader/feed/: admin.py  apps.py  filters.py  models.py  services.py  tasks.py  urls.py
rrs_reader/feed/api/: serializers.py  views.py
rrs_reader/feed/migrations/: 0003_userfeed_read_posts.py
rrs_reader/feed/tests/: factories.py  test_models.py  test_services.py  test_tasks.py  test_views.py
rrs_reader/templates/: base.html
rrs_reader/users/: adapters.py  admin.py  apps.py  models.py  urls.py
rrs_reader/users/api/: serializers.py
rss_reader/: conftest.py
rss_reader/feed/: admin.py  apps.py  exceptions.py  filters.py  services.py  tasks.py  urls.py
rss_reader/templates/: base.html
rss_reader/users/: adapters.py  admin.py  apps.py  models.py  urls.py
(+29 files in other folders)
