[tool.poetry]
name = "rss-reader"
version = "0.1.0"
description = "A simple RSS reader."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
psycopg2-binary = "^2.8"
celery = "^5.0"
redis = "^3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
